plugins {
	id 'net.fabricmc.fabric-loom'
	id 'maven-publish'
	id 'jacoco'
	id 'com.modrinth.minotaur' version '2.+'
}

import java.util.Date

// Single source of truth for the mod version across:
// - fabric.mod.json (${version})
// - jar filenames (archiveVersion)
// - Modrinth versionNumber (default)
//
// Embed the Minecraft line into the version string as SemVer build metadata (+mc<MINECRAFT_VERSION>).
// This keeps releases for different Minecraft versions from colliding.
version = "${project.mod_version}+mc${project.minecraft_version}"
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

def artifactVersion = project.version

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	maven { url = "https://maven.florianmichael.de/releases" }
    maven {
        name = "Terraformers"
        url = "https://maven.terraformersmc.com/"
    }
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	implementation "de.florianmichael:AsmFabricLoader:2.0.1"
	include "de.florianmichael:AsmFabricLoader:2.0.1"

    implementation "com.terraformersmc:modmenu:${project.modmenu_version}"
    localRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"

	// Unit tests (JUnit 5 via Fabric Loader JUnit)
	testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
	testImplementation platform("org.junit:junit-bom:5.10.2")
	testImplementation "org.junit.jupiter:junit-jupiter"
}

// Fabric client GameTests ("e2e")
fabricApi {
	configureTests {
		createSourceSet = true
		modId = "cbbg-gametest"
		enableGameTests = false
		enableClientGameTests = true
		eula = true
	}
}

processResources {
	inputs.property "version", project.version
	inputs.property "minecraft_version", project.minecraft_version

	filesMatching("fabric.mod.json") {
		expand(
			"version": inputs.properties.version,
			"minecraft_version": inputs.properties.minecraft_version
		)
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

test {
	useJUnitPlatform()
	finalizedBy jacocoTestReport

	// Fabric Loader JUnit bootstraps enough of the Minecraft/Fabric runtime that it writes
	// game-like output directories (e.g. ./config, ./logs) relative to the working directory.
	// Keep the repo root clean by running tests in a build-local sandbox.
	def testGameDir = layout.buildDirectory.dir("test-gamedir").get().asFile
	doFirst {
		testGameDir.mkdirs()
	}
	workingDir = testGameDir
	systemProperty "fabric.gameDir", testGameDir.absolutePath
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
	}
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	inputs.property "archivesName", project.base.archivesName

	// Unobfuscated (Mojang-named) jar for the *_unobfuscated runtime.
	// The default Fabric distribution jar is produced by `remapJar`.
	archiveVersion = artifactVersion
	archiveClassifier = "unobf"

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}


}
loom {

	accessWidenerPath = file("src/main/resources/cbbg.classtweaker")

}
tasks.named("sourcesJar") {
	archiveVersion = artifactVersion
}

def devTimestamp = new Date().format("yyyy_MM_dd__HH_mm_ss")
def devBaseName = project.base.archivesName.get()
def devVersion = project.version

tasks.register("cleanDevJars", Delete) {
	group = "build"
	description = "Deletes previously generated dev jars from build/libs."

	// Only clean when build succeeded (keeps old dev artifacts around if build fails).
	dependsOn tasks.named("build")

	delete fileTree(layout.buildDirectory.dir("libs").get().asFile) {
		include "${devBaseName}-*-dev-*.jar"
	}
}

def devLibsDir = layout.buildDirectory.dir("libs")
def devJarName = "${devBaseName}-${devVersion}-dev-${devTimestamp}.jar"
def devSourcesJarName = "${devBaseName}-${devVersion}-dev-${devTimestamp}-sources.jar"

def devJarOut = devLibsDir.map { it.file(devJarName) }
def devSourcesJarOut = devLibsDir.map { it.file(devSourcesJarName) }

tasks.register("devJar") {
	group = "build"
	description = "Writes a timestamped dev jar filename to build/libs."

	// Clean any previously generated dev jars before writing the new timestamped one.
	dependsOn tasks.named("cleanDevJars")

	def inJar = tasks.named("jar").flatMap { it.archiveFile }
	inputs.file(inJar)
	outputs.file(devJarOut)

	doLast {
		project.copy {
			from(inJar.get().asFile)
			into(devLibsDir.get().asFile)
			rename { devJarName }
		}
	}
}

tasks.register("devSourcesJar") {
	group = "build"
	description = "Writes a timestamped dev sources jar filename to build/libs."

	// Clean any previously generated dev jars before writing the new timestamped one.
	dependsOn tasks.named("cleanDevJars")

	def inSourcesJar = tasks.named("sourcesJar").flatMap { it.archiveFile }
	inputs.file(inSourcesJar)
	outputs.file(devSourcesJarOut)

	doLast {
		project.copy {
			from(inSourcesJar.get().asFile)
			into(devLibsDir.get().asFile)
			rename { devSourcesJarName }
		}
	}
}

tasks.register("dev") {
	group = "build"
	description = "Same as build, but also produces timestamped dev jars in build/libs."

	dependsOn tasks.named("build")
	dependsOn tasks.named("devJar")
	dependsOn tasks.named("devSourcesJar")
}

def optionalTrimmed = { String value ->
	if (value == null) {
		return null
	}
	def trimmed = value.trim()
	return trimmed.isEmpty() ? null : trimmed
}

def envOrProperty = { String envName, String propertyName ->
	return optionalTrimmed(System.getenv(envName)) ?: optionalTrimmed((String) project.findProperty(propertyName))
}

def readTextFileIfExists = { String relativePath ->
	def f = rootProject.file(relativePath)
	return f.exists() ? f.getText("UTF-8") : null
}

def modrinthUploadFilePath = envOrProperty("MODRINTH_UPLOAD_FILE", "modrinthUploadFile")
def modrinthSourcesUploadFilePath = envOrProperty("MODRINTH_SOURCES_UPLOAD_FILE", "modrinthSourcesUploadFile")

// Modrinth publishing (Minotaur)
modrinth {
	def tokenValue = envOrProperty("MODRINTH_TOKEN", "modrinthToken")
	if (tokenValue != null) {
		token = tokenValue
	}

	def projectIdValue = envOrProperty("MODRINTH_PROJECT_ID", "modrinthProjectId") ?:
		optionalTrimmed((String) project.findProperty("modrinth_project_id"))
	if (projectIdValue != null) {
		projectId = projectIdValue
	}

	def versionNumberValue = envOrProperty("MODRINTH_VERSION_NUMBER", "modrinthVersionNumber") ?: artifactVersion
	versionNumber = versionNumberValue
	versionName = "cbbg ${versionNumberValue}"

	versionType = envOrProperty("MODRINTH_VERSION_TYPE", "modrinthVersionType") ?: "release"

	// With Loom, this must be remapped jar.
	// In CI publish, we want to upload the exact, already-built (and attested) release assets
	// rather than rebuilding. Allow overriding the upload files via env/Gradle property.
	if (modrinthUploadFilePath != null) {
		def uploadF = rootProject.file(modrinthUploadFilePath)
		if (!uploadF.exists()) {
			throw new GradleException("Modrinth upload file does not exist: ${uploadF}")
		}
		uploadFile = uploadF

		def additional = []
		if (modrinthSourcesUploadFilePath != null) {
			def sourcesF = rootProject.file(modrinthSourcesUploadFilePath)
			if (!sourcesF.exists()) {
				throw new GradleException("Modrinth sources upload file does not exist: ${sourcesF}")
			}
			additional.add(sourcesF)
		}
		additionalFiles = additional
	} else {
		uploadFile = tasks.named("jar")
		additionalFiles = [
			tasks.named("sourcesJar")
		]
	}

	// Redundant with Loom auto-detection, but explicit is nice for reproducibility.
	gameVersions = [
		project.minecraft_version
	]
	loaders = [
		"fabric"
	]

	def changelogValue = envOrProperty("MODRINTH_CHANGELOG", "modrinthChangelog") ?: readTextFileIfExists("release_notes.md")
	if (changelogValue != null) {
		changelog = changelogValue
	}

	dependencies {
		required.project "fabric-api"
	}
}

// When uploading a prebuilt jar (e.g. CI publish), ensure we don't rebuild artifacts just to upload them.
if (modrinthUploadFilePath != null) {
	tasks.named("modrinth") {
		dependsOn.clear()
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
